syntax = "proto3";

package TW.Solana.Proto;
option java_package = "wallet.core.jni.proto";

message Transfer {
    string recipient = 1;
    uint64 value = 2;
}

message Stake {
    string validator_pubkey = 1;
    uint64 value = 2;
}

message DeactivateStake {
    string validator_pubkey = 1;
}

message WithdrawStake {
    string validator_pubkey = 1;
    uint64 value = 2;
}

message CreateTokenAccount {
    string token_mint_address = 1;
    string token_address = 2;
}

message TokenTransfer {
    string token_mint_address = 1;
    string sender_token_address = 2;
    string recipient_token_address = 3;
    uint64 amount = 4;
    uint32 decimals = 5; // Note: 8-bit value
}

// Input data necessary to create a signed transaction.
message SigningInput {
    oneof transaction_type {
        Transfer transfer_transaction = 1;
        Stake stake_transaction = 2;
        DeactivateStake deactivate_stake_transaction = 3;
        WithdrawStake withdraw_transaction = 4;
        CreateTokenAccount create_token_account_transaction = 5;
        TokenTransfer token_transfer_transaction = 6;
    }
    bytes private_key = 7;
    string recent_blockhash = 8;
}

// Transaction signing output.
message SigningOutput {
    string encoded = 1;
}
